--- a/example_project/Pipfile
+++ b/example_project/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 
 [packages]
 django = "==2.2.8"
+django-emailuser = {editable = true,git = "https://github.com/lakesite/django-emailuser"}
 
 [requires]
 python_version = "3.6"
